# aurora

./: .coveragerc  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: AURORA_OPERATING_MANUAL.md  AURORA_VISION.md  acoustic_kernel_surface_inventory.md  arb_performance_baseline.md  audio_classifier_graph_mapping.md  aurora.md  aurora_prerelease_audit.md  aurora_run_bundle_boundary.md  aurora_run_bundle_v0_spec.md  kernel_ingress_strategy.md  release_evidence.md  release_statement_v0.1.0.md  runtime_seam_framing.md  runtime_substrate.md  runtime_surface_strategy.md
docs/api/: README.md  arb.md  runtime.md
docs/decisions/: ADR-001-stdlib-runtime-boundary.md  ADR-002-fake-backed-testing-native-non-proof.md  ADR-003-arb-v0-versioning-compatibility.md  ADR-004-downstream-dependency-direction.md  README.md
scripts/: check_api_docs_exports.py  check_coverage_thresholds.py  measure_arb_performance.py  verify_repo_state.py
tests/: test_arb_canonical_json.py  test_arb_cli.py  test_arb_hasher.py  test_arb_reader.py  test_arb_validator.py  test_arb_writer.py  test_audio_runtime.py  test_check_api_docs_exports.py  test_check_coverage_thresholds.py  test_dispatcher_contract.py  test_image_runtime.py  test_library_loader_runtime.py  test_loader_contract.py  test_measure_arb_performance.py  test_native_audio_dispatcher.py  test_runtime_smoke.py  test_runtime_surface.py  test_verify_repo_state.py
(+61 files in other folders)
