[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora"
version = "0.1.0"
description = "Acoustic Unified Runtime for Observable, Replayable Acoustics — governed runtime substrate and ARB v0.1 (stdlib-only runtime)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aurora = ["py.typed"]

# M34 — strict static typing for first-party `src/aurora/` only (stdlib runtime; no tests/scripts).
# Run: `mypy src/aurora` (CI and DEVELOPMENT.md); config applies to checked paths.
[tool.mypy]
python_version = "3.11"
strict = true
explicit_package_bases = true
mypy_path = ["src"]
